--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,19 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="#">
+                    <img src="static\img\musical-note.png" width="30" height="30" alt="">
+                </a>
                 <a class="navbar-brand" href="/">Lyringo</a>
             </nav>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                
+              
+            
+              </div>
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="about">About</a>
                 <a class="nav-item nav-link" href="flashcards">Flashcards</a>
