--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="static\img\musical-note.png" width="30" height="30" alt="">
                 </a>
                 <a class="navbar-brand" href="/">Lyringo</a>
@@ -15,17 +15,11 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                
-              
-            
-              </div>
-              <div class="navbar-nav">
-                <a class="nav-item nav-link" href="about">About</a>
-                <a class="nav-item nav-link" href="flashcards">Flashcards</a>
-                <a class="nav-item nav-link" href="signin">Sign in</a>
-                <form class="form-inline">
-                    <a href="signup" class="btn btn-outline-primary" role="button">Sign up</a>
-                </form>
+              <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link mx-2" href="about">About</a>
+                <a class="nav-item nav-link mx-2" href="flashcards">Flashcards</a>
+                <a class="nav-item nav-link mx-2" href="signin">Sign in</a>
+                <a href="signup" class="btn btn-outline-primary mx-2" role="button">Sign up</a>
               </div>
             </div>
           </nav>
