get spotify playlist data, songs, display playlist iframe

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,10 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <nav class="navbar navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="home">
                     <img src="static\img\musical-note.png" width="30" height="30" alt="">
                 </a>
-                <a class="navbar-brand" href="/">Lyringo</a>
+                <a class="navbar-brand" href="home">Lyringo</a>
             </nav>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
