--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Lyringo{% endblock %}
 {% block content %}
-<h1>Test</h1>
+<iframe style="border-radius:12px" src={{url}} width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 {% endblock %}
